<resources>
    <string name="app_name">ContactsPhone</string>
    <string name="content_description_image">Image of the contact</string>
    <string name="contacts_title">Contacts</string>
    <string name="no_data">No data available</string>
    <string name="personal_info">Personal information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo library</string>
    <string name="label_add_image">Add Image</string>
    <string name="new_contact">New Contact</string>
    <string name="aspect_ratio_16_9">16:9</string>
    <string name="aspect_ratio_4_3">4:3</string>
    <string name="rotate_left_button_content_description">button rotate</string>
    <string name="rotate_right_button_content_description">rotate button</string>
    <string name="tag_picture">tag_picture</string>
    <string name="tag_gallery">tag_gallery</string>
    <string name="tag_photo">tag_photo</string>
    <string name="cropping_tag">cropping_tag</string>
    <string name="crop_path">crop_path</string>
    <string name="search">Search</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_phone_empty">Phone cannot be empty</string>
</resources>
