<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_image"
                app:srcCompat="@drawable/user_placeholder_icon"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="@dimen/contacts_creation_buttons_container_width"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:background="@android:color/black"
                android:orientation="horizontal"
                android:alpha="0.7"
                android:id="@+id/relativeLayout">

                <TextView
                    android:id="@+id/cameraButtonCreation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/camera"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:clickable="true"
                    android:textSize="@dimen/contacts_creation_buttons_container_text_size"
                    android:textColor="@android:color/white"
                    android:drawableTop="@drawable/ic_camera"/>

                <TextView
                    android:id="@+id/labelButtonCreation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/label_add_image"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textSize="@dimen/contacts_creation_buttons_container_text_size"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/galleryButtonCreation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/photo_library"
                    android:textColor="@android:color/white"
                    android:drawableTop="@drawable/ic_image"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:textSize="@dimen/contacts_creation_buttons_container_text_size" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_title_section"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_top_section_detail">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_person"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <EditText
                    android:id="@+id/personName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:inputType="textPersonName"
                    android:hint="@string/name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_email"
                    android:adjustViewBounds="true"
                    android:padding="12dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_phone"
                    android:adjustViewBounds="true"
                    android:padding="12dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/phoneText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:minWidth="230dp"
                        android:hint="@string/phone"/>

                    <Spinner
                        android:id="@+id/spinnerTypePhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:inputType="textEmailAddress"
                        android:minWidth="180dp"
                        android:hint="@string/phone"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCreation"
        android:src="@drawable/ic_save"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        style="@style/FabStyle"/>

</RelativeLayout>